syntax = "proto3";
package gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins.partitions.input";

import "google/protobuf/any.proto";

// Filters
message FilterInput {
    google.protobuf.Any filter = 1;
}

message AndFilterInput {
    FilterInput a = 1;
    FilterInput b = 2;
}

message FalseFilterInput {
}

message NotFilterInput {
    FilterInput a = 1;
}

message OrFilterInput {
    FilterInput a = 1;
    FilterInput b = 2;
}

message TrueFilterInput {   
}

message AttributeFilterInput {
    AttributeIdInput attributeId = 1;
    EqualityInput equality = 2;
    google.protobuf.Any value = 3;
}

// Labelers
message LabelerInput {
    google.protobuf.Any labeler = 1;
}

// Equality
enum EqualityInput {
    LESS_THAN = 0;
    LESS_THAN_EQUAL = 1;
    EQUAL = 2;
    NOT_EQUAL = 3;
    GREATER_THAN_EQUAL = 4;
    GREATER_THAN = 5;
}

// Attribute
message AttributeIdInput {
    google.protobuf.Any id = 1;
}

// Partition
message PartitionInput {
    bool retainPersonKeys = 1;
    repeated LabelerInput labelers = 2;
    optional FilterInput filter = 3;
}

message PartitionMapInput {
    google.protobuf.Any key = 1;
    PartitionInput partition = 2;
}

// PluginData
message PartitionsPluginDataInput {
    bool supportRunContinuity = 1;
}
